# aws-iot-demo

./: .gitignore  Makefile  README.md  pyproject.toml
lambdafunc/api/lambda_function/: lambda_function.py
lambdafunc/stream/lambda_function/: lambda_function.py
src/: main.py
terraform/: build_iot_devices.sh  main.tf
terraform/modules/api/: main.tf  output.tf  variables.tf
terraform/modules/api/template/: definition.json
terraform/modules/athena/: main.tf  variables.tf
terraform/modules/athena/template/: create_tbl.sql
terraform/modules/balancers/: main.tf  output.tf  variables.tf
terraform/modules/bucket/: main.tf  output.tf  variables.tf
terraform/modules/cloud9/: main.tf  output.tf  variables.tf
terraform/modules/database/: main.tf  output.tf
terraform/modules/instances/: main.tf  variables.tf
terraform/modules/instances/template/: builder.sh
terraform/modules/iot/: main.tf  output.tf  variables.tf
terraform/modules/lambda/: main.tf  output.tf  variables.tf
terraform/modules/network/: main.tf  output.tf
terraform/modules/opensearch/: main.tf  output.tf  variables.tf
terraform/modules/permissions/: main.tf  output.tf  variables.tf
terraform/modules/permissions/template/: policy_firehose.json  policy_firehose_to_s3.json  policy_timestream.json
terraform/modules/security/: main.tf  output.tf  variables.tf
terraform/modules/stream/: main.tf  output.tf  variables.tf
