[tool.poetry]
name = "aws-iot-test"
version = "0.1.0"
description = ""
authors = ["lv416e <ryo169116961@icloud.com>"]
readme = "README.md"
packages = [{include = "aws_iot_test"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
